config/eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: itaid-production-service
  spec:
    selector:
      app: itaid-production
    ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
    type: ClusterIP
